Working through compilation errors